=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.15_01-dev

DYNAMIC=1 works again

Apache::PerlRun will now save/restore %INC to cure problem with
"library" files that don't include a package delaration

global renames: $Apache::Server{Re}Starting -> $Apache::Server::{Re}Starting

s/PERL_TIE_TABLES/PERL_TABLE_API/g

fix Apache::URI so components can be properly undef-d, thanks to
Charles C. Fu for the spot

</Perl> match is now case insensitive, thanks to Randal Schwartz for
the spot 

added Apache::Util::string_size function

PerlDirectiveHandlers changes:

 -fix Apache::ExtUtils::command_table to properly deal with
  <Containers> inside HASH ref entries
 -now looks for a DIR_CREATE() method rather than new()
 -dir_merge() must now be DIR_MERGE()
 -order of $parms and $cfg args swapped
 -added missing FLAG directive handler
 -module.name is now the Perl package name, rather than Foo.xs 

add dTHR for PERL_TIE_SCRIPTNAME=1 [Michael Parker <parker@austx.tandem.com>]

deprecate $r->cgi_{env,var}, $r->subprocess_env can do all that and
them some

when rwrite() returns -1, break out of the loop, no longer checking
r->connection->aborted 

fix $...NameWithVirtualHost defaulting in Apache::PerlRun 
["Ryan A. Whelan" <rwhelan@2rad.net>

r->as_string now uses table_do() and moved to xs

use 1.3.2-dev+'s ap_custom_response() when possible

remove Apache::DESTROY method (was only for avoiding old AutoLoader bug)

Apache::exit fixed under Apache::PerlRun

fix chdir_file() call in Apache::Registry so we go back to the original
directory [Gerald Richter <richter@ecos.de>]

added :override :args_how tags to Apache::Constants

add DIR_MAGIC_TYPE to perl_handlers[] table for directory indexing
modules

Apache::Log optimizations/enhancements:
  $r->log now invokes ap_log_rerror (w/ 1.3.2-dev+)
  ${r,s}->log->$method() will now accept a CODE ref as it's first
  argument, which is only called when LogLevel >= $method