@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- make Apache->server->register_cleanup work
-
 - <Perl> should report failed config
 
 - $ENV{PATH}
